<resources>
    <string name="app_name">Quiz</string>
    <string name="ist_099_examination">IST 099 Examination</string>
    <string name="united_states_international_university">United States International University</string>
    <string name="usiu_logo">USIU logo</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="student_id">Enter Your Student ID</string>
    <string name="student_name">Enter Your Student Name</string>
    <string name="header_1">IST 099 Exam. Question#1</string>
    <string name="header_2">IST 099 Exam. Question#2</string>
    <string name="header_3">IST 099 Exam. Question#3</string>
    <string name="header_4">IST 099 Exam. Question#4</string>
    <string name="header_5">IST 099 Exam. Question#5</string>
    <string name="header_results">IST 099 Exam. Results</string>
    <string name="q1">Q1.</string>
    <string name="q2">Q2.</string>
    <string name="q3">Q3.</string>
    <string name="q4">Q4.</string>
    <string name="q5">Q5.</string>
    <string name="question_1">The location on a windows operating system where all the deleted files are stored is</string>
    <string name="question_2">When you draw a plan of a house, you would make use of the following software</string>
    <string name="question_3">In which of the following is batch programming used?</string>
    <string name="question_4">Virtual memory is</string>
    <string name="question_5">Multiprogramming systems</string>

    <string name="my_computer">A. my computer</string>
    <string name="my_documents">B. my documents</string>
    <string name="the_recycle_bin">C. the recycle bin</string>
    <string name="the_task_bar">D. the task bar</string>

    <string name="database">A. database</string>
    <string name="computer_aided_design">B. computer aided design</string>
    <string name="computer_graphics">C. computer graphics</string>
    <string name="spreadsheet">D. spreadsheet</string>

    <string name="holiday">A. booking a holiday</string>
    <string name="stolen">B. checking stolen vehicles</string>
    <string name="traffic">C. control of traffic lights</string>
    <string name="payroll">D. producing a company\'s payroll</string>

    <string name="main_memory">A. an extremely large main memory</string>
    <string name="secondary">B. an extremely large secondary memory</string>
    <string name="illusion">C. an illusion of extremely large main memory</string>
    <string name="type_super">D. a type of memory used in super computers</string>

    <string name="easier">A. are easier to develop than single programming system</string>
    <string name="main_frame">B. are used only on large main frame computers</string>
    <string name="execute">C. execute each job faster</string>
    <string name="several">D. run several programs at the same time</string>

    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="results_sent">Results sent to your lecturer on 0735000330</string>
    <string name="your_results">Your Results=</string>
    <string name="your_id">Your ID</string>
    <string name="questions_not_attempted">Questions not attempted=</string>
    <string name="questions_attempted">Questions attempted=</string>
    <string name="questions_failed">Questions failed=</string>
    <string name="submit">Submit</string>
</resources>