<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/header_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="10dp"
        android:layout_marginBottom="640dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="476dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/q2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="214dp"
        android:layout_height="160dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_aided_design" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_graphics" />

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spreadsheet" />
    </RadioGroup>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="407dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="76dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonPrevious"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous" />

        <Button
            android:id="@+id/buttonHome"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/buttonNext"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>